--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
     </div>
 
     <div id="left">
-        <img id="svg" src="" alt="">
+        <img id="svg" src="hcb-svg.svg" alt="">
+ 
         
     </div>
 
